codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_selected_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1275
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ PreToolUse hooks                                                                                             │
│ Turn hooks on or off. Your changes are saved automatically.                                                  │
│                                                                                                              │
│  [x] Hook 1                                                                                                  │
│› [x] Hook 2                                                                                                  │
│                                                                                                              │
│  Event     PreToolUse                                                                                        │
│  Matcher   Bash                                                                                              │
│  Source    Admin config                                                                                      │
│  Command   /enterprise/hooks/pre-tool-use-2.sh                                                               │
│  Mode      Sync                                                                                              │
│  Timeout   30s                                                                                               │
│  Trust     Managed                                                                                           │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  Managed (always on) · esc back
