codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_untrusted_enabled_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
assertion_line: 1170
expression: "render_lines(&view, 112)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ PreToolUse hooks                                                                                             │
│ 1 hook needs review before it can run.                                                                       │
│                                                                                                              │
│› [!] Hook 1 · new                                                                                            │
│                                                                                                              │
│  Event     PreToolUse                                                                                        │
│  Matcher   Bash                                                                                              │
│  Source    User config - /tmp/hooks.json                                                                     │
│  Command   ~/bin/untrusted.sh                                                                                │
│  Mode      Async                                                                                             │
│  Timeout   30s                                                                                               │
│  Trust     New hook - review required                                                                        │
│                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
  t trust · esc back
